--- a/series.html
+++ b/series.html
@@ -974,7 +974,8 @@ function renderEpisodes(season) {
   episodes.forEach((ep, idx) => {
     const btn = document.createElement("button");
     btn.className = "ep-btn";
-    btn.textContent = `Серія ${ep.episode || idx + 1}`;
+    const label = ep.episode_label?.trim() || `Серія ${ep.episode || idx + 1}`;
+    btn.textContent = label;
     btn.addEventListener("click", () => {
       list.querySelectorAll(".ep-btn.active").forEach(b => b.classList.remove("active"));
       btn.classList.add("active");
