--- a/index.html
+++ b/index.html
@@ -191,12 +191,30 @@ const unique = Array.from(map.values());
           : ''}
       </div>
       <div class="title">${item.title}</div>
-      <div class="meta">
-        <span>${item.type || ''}</span> • 
-        <span>${item.genre || ''}</span> • 
-        <span>${item.year || ''}</span> • 
-        <span>IMDb: ${item.imdb || '—'}</span>
-      </div>
+      const safeGenre = (item.genre || '').replace(/[^\p{L}\p{N},.() ]+/gu, ' ').trim();
+
+card.innerHTML = `
+  <div class="poster">
+    <img 
+      src="${proxyPoster}" 
+      alt="${item.title}"
+      onerror="this.src='https://via.placeholder.com/200x300?text=No+Image'; this.onerror=null;"
+      loading="lazy"
+      style="width:100%; height:300px; object-fit:cover; display:block;"
+    >
+    ${String(item.pro_access || '').toUpperCase() === 'PRO' 
+      ? '<span class="badge plus">PRO</span>' 
+      : ''}
+  </div>
+  <div class="title">${item.title}</div>
+  <div class="meta">
+    <span>${item.type || ''}</span> • 
+    <span>${safeGenre}</span> • 
+    <span>${item.year || ''}</span> • 
+    <span>IMDb: ${item.imdb || '—'}</span>
+  </div>
+`;
+
     `;
 
     card.addEventListener("click", () => {
@@ -555,6 +573,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
